--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,6 +24,6 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - name: Put php files into zip
-      - uses: actions/checkout@v2
-      - uses: montudor/action-zip@v1
-      - run: zip -qq anemitoff-wp-proxied.zip *.php
+        uses: actions/checkout@v2
+        uses: montudor/action-zip@v1
+        run: zip -qq anemitoff-wp-proxied.zip *.php
