--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,4 +26,4 @@ jobs:
       - name: Put php files into zip
         uses: actions/checkout@v2
         uses: montudor/action-zip@v1
-        run: zip -qq anemitoff-wp-proxied.zip *.php
+          with zip -qq anemitoff-wp-proxied.zip *.php
