--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,5 +24,5 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Put php files into zip
-        uses: montudor/action-zip@v1
+        uses: montudor/action-zip
           with zip -qq anemitoff-wp-proxied.zip *.php
