--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,11 +16,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: papeloto/action-zip@v1
+      - name: Package
+        uses: papeloto/action-zip@v1
         with:
           files: anemitoff-wp-proxied.php
           dest: anemitoff-wp-proxied.zip
-      - uses: actions/upload-artifact@v2
+      - name: Release
+        uses: softprops/action-gh-release@v1
         with:
-          name: wp-plugin-package
-          path: anemitoff-wp-proxied.zip
+          files: anemitoff-wp-proxied.zip
